--- a/style.css
+++ b/style.css
@@ -6,3 +6,7 @@ body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
 }
+#page-wrap {
+     width: 800px;
+     margin: 0 auto;
+}
