--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 .nav li {
   display: inline;
 }
+.jumbotron h1 {
+  position: relative;
+  top: 91px;
+  left: 55px;
+}
 body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 250;
