--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ width:100%;
   display: inline;
 
 }
-head {
+h1 {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 250;
 }
