--- a/style.css
+++ b/style.css
@@ -2,9 +2,21 @@
 	margin: 10; 
 	padding: 3; 
 }
-#head
-position: fixed;
-width:100%;
+#header {
+    top:0px;
+    right:20px;
+    left:20px;
+    position:fixed;
+    background: #eee;
+    border:1px solid #ccc;
+    padding: 0 10px 0 20px;
+}
+#header h1 {
+    margin: 0px;
+    padding: opx;
+    font:18px "Plantagenet Cherokee";
+    letter-spacing:2px;
+}
 
 .nav li {
   display: inline;
