--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     color: #000000;
     margin-top:40px;
 }
+ body {
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-weight: 250;
+ }
 #header {
     top:0px;
     right:0;
