--- a/style.css
+++ b/style.css
@@ -1,40 +1,65 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  padding-top: 250px;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-    font-weight: 250;
-}
-header {
-  height: 300px;
-  padding-top: 50px;
-  background: #f07057;
-}
-.main-nav,
-.main {
-  position: relative; 
-}
-.main-nav {
-  background: #fff;
-  height: 80px;
-  z-index: 150;
-  margin-bottom: -80px;
-  box-shadow: 0 2px 3px rgba(0,0,0,.4);
-}
-header,
-.main-nav-scrolled {
-  position: fixed;
-  width: 100%;
-  top: 0;
-}
-.main {
-  background: #f2f2e8;
-  padding: 110px 50px 50px;
-  column-count: 2;
-  column-gap: 40px;
-}
+ * {
+ 	margin: 10; 
+ 	padding: 3; 
+ }
  
-
-
+ 
+ .nav li {
+   display: inline;
+ 
+ }
+ 
+ body {
+     background: #FFFFFF;
+     margin: 0;
+     padding: 0;
+     text-align: center;
+     color: #000000;
+     margin-top:40px;
+ }
+  body {
+     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+     font-weight: 250;
+  }
+ #header {
+     top:0px;
+     right:0;
+     left:0;
+     position:fixed;
+     background: #eee;
+     border:1px solid #ccc;
+     padding: 0 10px 0 20px; 
+ }
+ #header h1 {
+     margin: 0px;
+     padding: opx;
+     letter-spacing:2px;
++    font-size: 250%;
+     
+ }
+ #footer {
+     padding: 0 10px;
+     background:#EEE;
+     bottom:0px;
+     right:0px;
+     left:0px;
+     position:fixed;
+ }
+ #container {
+     text-align: left;
+     padding: 20px;
+     width: 100%;
+     background: #FFF;
+ }
+ #footer p {
+     margin: 0;
+     padding: 10px 0;
+ }
+ #page-wrap {
+      width: 400px;
+      margin: 0 auto;
+ }
+ ul
+ {
+ list-style-type: none;
+ }
